(lang dune 3.5)

(name PFPL_interpreters)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Lesley Lai")

(maintainers "Lesley Lai")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name PFPL_interpreters)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
